# cookieplone-templates

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cookiecutter.json  cookieplone-config.json  pyproject.toml  requirements.txt  version.txt
.github/: CODEOWNERS
.github/workflows/: all_templates.yml  backend_addon.yml  changelog.yml  frontend_addon.yml  main.yml  project.yml  project_classic.yml  readme-link-check.yml  report.yml  sub_cache.yml  sub_frontend_project.yml  sub_project_settings.yml  test-repository.yml  test-template.yml  test-variables.yml
.scripts/: list_templates.py  release.py  report_context.py  report_keys_usage.py
backend_addon/: .gitignore  Makefile  README.md  cookiecutter.json
backend_addon/hooks/: post_gen_project.py  pre_prompt.py
backend_addon/tests/: conftest.py  test_cutter.py  test_cutter_distribution.py  test_cutter_no_headless.py  test_variables.py
backend_addon/{{ cookiecutter.__folder_name }}/: .gitignore  .meta.toml  .mrbob.ini  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tox.ini
documentation_addon/: Makefile  README.md  cookiecutter.json
documentation_addon/hooks/: post_gen_project.py
documentation_addon/tests/: conftest.py  test_cutter.py
documentation_addon/{{cookiecutter.__folder_name}}/: LICENSE.md  MANIFEST.in  README.md  pyproject.toml
documentation_starter/: Makefile  cookiecutter.json
documentation_starter/hooks/: post_gen_project.py  pre_prompt.py
documentation_starter/tests/: test_cutter.py
documentation_starter/{{cookiecutter.__folder_name}}/: Makefile  README.md  pyproject.toml
documentation_starter/{{cookiecutter.__folder_name}}/docs/: conf.py  glossary.md  index.md
documentation_starter/{{cookiecutter.__folder_name}}/docs/guides/: getting-started.md  usage.md
documentation_starter/{{cookiecutter.__folder_name}}/docs/reference/: file-system-structure.md  theme-elements.md
frontend_addon/: Makefile  README.md  cookiecutter.json
frontend_addon/hooks/: post_gen_project.py  pre_gen_project.py
frontend_addon/tests/: conftest.py  test_cutter.py  test_variables.py
frontend_addon/{{ cookiecutter.__folder_name }}/: .eslintrc.js  .pre-commit-config.yaml  Makefile  README.md  mrs.developer.json  package.json  (+1 more)
hooks/: pre_prompt.py
news/: +7678e301.bugfix.md  +Volto19support.feature  +addedFilterBlobs.feature  +addedMissingWebpackResolver.bugfix  +backend_changelog.internal  +catalogSupport.feature  +changelog.internal  +conditional_project_questions.feature  +config-min-version.feature  +config-renderer.feature  +cookieplone.internal  +devops.feature  +fixrazzleimportinstorybook.bugfix  +fixrtddocsbuild.bugfix  +flexible_image_naming.feature  +gha.internal  +gha_triggers.internal  +icons_seven.feature  +isolation.bugfix  +jq.internal  +list_templates_script.internal  +llm.feature  +lychee-linkcheck.internal  +manual.feature  +monorepo-calver.feature  +monorepo-gha.feature  +monorepo-readme.documentation  +monorepo.feature  +morerazzlefixes.bugfix  +plone7_nick_bff_tests.tests  +plonecli.bugfix  +pnpm-lock.bugfix  +pnpm10build.bugfix  +post_gen_hooks_refactor.internal  +pre_prompt_min_version_check.internal  +prepare-release.internal  +python-project.bugfix  +python-version.bugfix  +recursive_workspaces.bugfix  +renamed_seven_addon.internal  (+95 more)
project/: .gitignore  Makefile  README.md  cookiecutter.json
project_classic/: Makefile  README.md  cookiecutter.json
seven_addon/: README.md  cookiecutter.json
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/: Makefile  README.md  bobtemplate.cfg  instance.yaml  mx.ini  pyproject.toml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/.github/workflows/: ci.yml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/: __init__.py  configure.zcml  dependencies.zcml  permissions.zcml  profiles.zcml  testing.py
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/browser/: configure.zcml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/locales/: __main__.py
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/profiles/default/: browserlayer.xml  controlpanel.xml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/profiles/default/registry/: main.xml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/profiles/uninstall/: browserlayer.xml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/serializers/: configure.zcml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/setuphandlers/: __init__.py
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/src/packagename/upgrades/: configure.zcml
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/tests/: conftest.py
templates/add-ons/backend/{{ cookiecutter.__folder_name }}/tests/setup/: test_setup_uninstall.py
templates/devops/ansible/{{ cookiecutter.__folder_name }}/: Makefile  README.md  ansible.cfg  pyproject.toml
templates/devops/ansible/{{ cookiecutter.__folder_name }}/etc/stacks/: traefik.yml
templates/devops/ansible/{{ cookiecutter.__folder_name }}/inventory/: hosts.yml
templates/devops/ansible/{{ cookiecutter.__folder_name }}/inventory/group_vars/all/: base.yml  docker.yml  sshd.yml  stacks.yml  swarm.yml  ufw.yml
templates/devops/ansible/{{ cookiecutter.__folder_name }}/playbooks/: setup.yml
templates/devops/ansible/{{ cookiecutter.__folder_name }}/tasks/docker/: task_swarm.yml
templates/migration/transmute/{{ cookiecutter.__folder_name }}/: .env_dist  .gitignore  Makefile  README.md  pyproject.toml  transmute.toml
templates/migration/transmute/{{ cookiecutter.__folder_name }}/scripts/: reports_as_csv.py
templates/migration/transmute/{{ cookiecutter.__folder_name }}/src/packagename/processors/: __init__.py  collection.py
templates/migration/transmute/{{ cookiecutter.__folder_name }}/src/packagename/utils/: querystring.py
tests/: conftest.py  test_required_variables.py
(+585 files in other folders)
