[project]
name = "cookieplone-templates"
version = "0.1.0"
description = "Collection of templates for Plone integrators to use through Cookieplone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookieplone>=0.9.7",
    "gitpython>=3.1.43",
    "pytest>=8.3.5",
    "pytest-cookies>=0.7.0",
    "pytest-jsonschema>=1.0.0b1",
    "pytest-md-report>=0.6.3",
    "tomli>=2.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
md_report = true
md_report_verbose = 0
md_report_color = "auto"

[tool.ruff]
include = ["hooks/*.py", "tests/**.py"]
target-version = "py310"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.towncrier]
package = "cookieplone-templates"
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/plone/cookieplone-templates/issues/{issue})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.mypy]
ignore_missing_imports = true
