[project]
name = "{{ cookiecutter.title.replace(' ', '_').replace('-', '_').replace('.', '_') }}"

description = "{{ cookiecutter.description }}"
keywords = [
  "documentation",
  "plone",
  "sphinx",
  "{{ cookiecutter.title }}"
]
version="1.0.0"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}" },
]
dependencies = [
  "plone-sphinx-theme>=0.1.0",  # Use the latest stable version or a minimum
  "pytest",
  "setuptools",
  "sphinx>=7.4.7,<8",
  "myst-parser>=3.0.1",
  "pydata-sphinx-theme>=0.15.4",  # Included by plone-sphinx-theme but listed for clarity
  "sphinx-book-theme>=1.1.3",     # Included by plone-sphinx-theme but listed for clarity
  "graphviz",
  "linkify-it-py",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-examples",
  "sphinxcontrib-mermaid",
  "sphinx-notfound-page",
  "sphinx-reredirects",
  "sphinx-sitemap",
  "sphinxcontrib.httpdomain",
  "sphinxcontrib.httpexample",
  "sphinxcontrib.video",
  "sphinxcontrib.youtube",
  "sphinxext-opengraph",
]

[project.urls]
Repository = "https://github.com/{{ cookiecutter.github_organization }}/{{ cookiecutter.__folder_name }}"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
