[project]
name = "{{ cookiecutter.python_package_name }}"
version = "{{ cookiecutter.__version_package }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">={{ cookiecutter.__supported_versions_python[0] }}"
authors = [
    { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    {%- for version in cookiecutter.__supported_versions_python -%}
    "Programming Language :: Python :: {{ version }}",
    {%- endfor %}
]
dependencies = [
    "collective-transmute>=1.0.0b1",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
target-version = "py313"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
ignore_missing_imports = true
